--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
-    "firebase": "^10.8.1",
+    "firebase": "^10.6.0",
     "jsonwebtoken": "^9.0.2",
     "next": "14.0.3",
     "next-auth": "^4.24.5",
@@ -36,6 +36,8 @@
     "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^15.2.2",
     "postcss": "^8",
+    "prettier": "^3.2.5",
+    "prettier-plugin-tailwindcss": "^0.5.13",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
