--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "next-auth": "^4.24.5",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "sass": "^1.75.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.4.2",
