--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prepare": "husky"
   },
   "dependencies": {
     "axios": "^1.6.7",
@@ -32,7 +33,7 @@
     "daisyui": "^4.7.3",
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
-    "husky": "^9.0.11",
+    "husky": "^8.0.3",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^15.2.2",
